# tangram

./: flake.nix
crates/app/routes/organizations/_/members/_/server/: post.rs
crates/cli/: Cargo.toml  train.rs
crates/core/: Cargo.toml  config.rs  model.rs  predict.rs  stats.rs  train.rs
crates/ctrlc/: Cargo.toml  lib.rs
crates/linear/: binary_classifier.rs  lib.rs  multiclass_classifier.rs  regressor.rs
crates/linear/benchmarks/: allstate.rs  boston.rs  census.rs  flights.rs  heart_disease.rs  higgs.rs  iris.rs
crates/metrics/: Cargo.toml  binary_classification.rs  multiclass_classification.rs  regression.rs
crates/table/: Cargo.toml  lib.rs  load.rs
crates/tree/: lib.rs  train.rs
crates/tree/benchmarks/: allstate.rs  boston.rs  census.rs  flights.rs  heart_disease.rs  higgs.rs  iris.rs
languages/javascript/examples/node/basic/: package-lock.json
languages/python/: Cargo.toml  lib.rs
languages/python/examples/train/: main.py
languages/python/examples/train/census/: main.py
languages/python/examples/train/heart_disease/: README.md  main.py
languages/python/examples/train/higgs/: config.json  main.py
languages/python/examples/train/iris/: main.py
languages/python/scripts/: dev
languages/python/tangram/: __init__.py  tangram_python.pyi
