[package]
authors = ["Tangram"]
edition = "2021"
name = "tangram_python"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
name = "tangram_python"
path = "lib.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
chrono = { version = "0.4", features = ["serde"] }
memmap = "0.7"
pyo3 = { version = "0.15", features = ["abi3-py37", "extension-module"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tangram_core = { path = "../../crates/core" }
tangram_metrics = { path = "../../crates/metrics" }
tangram_model = { path = "../../crates/model" }
tangram_kill_chip = { path = "../../crates/kill_chip" }
tangram_ctrlc = { path = "../../crates/ctrlc" }
tangram_table = {path = "../../crates/table" }
url = { version = "2", features = ["serde"] }
arrow2 = "0.9.0"
